force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Add_To_EIR__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Add_To_EIR__c</fullName>
    <description>The system automatically populates this formula field if your fee type is stock.</description>
    <formula>IF(TEXT(LLC_BI__Fee_Type__c)=&quot;Stock&quot;, true, false)</formula>
    <inlineHelpText>This field is checked if your fee type is stock.</inlineHelpText>
    <label>Add To EIR</label>
    <type>Checkbox</type>
</CustomField>