force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Add_To_Principal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Add_To_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED-- This optional checkbox field adds fees to principal balance when charged.</description>
    <label>-D Add To Principal</label>
    <type>Checkbox</type>
</CustomField>