force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>This field allows the user to specify the total amount charged for the fee. This could be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>