force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Remaining__c</fullName>
    <formula>LLC_BI__Amount__c - LLC_BI__Amount_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>