force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Annual_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Payment_Amount__c</fullName>
    <description>Users populate this optional currency field to indicate the amount the borrower pays annually for the fee. By default, this field is blank.</description>
    <inlineHelpText>Enter the annual payment amount for the fee.</inlineHelpText>
    <label>Annual Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>