force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Basis_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Basis_Amount__c</fullName>
    <description>Administrators populate this field with the basis amount. The system uses this field for percentage fees calculations. By default, it is blank.</description>
    <inlineHelpText>Enter the basis amount. The system uses this field for percentage fees calculations.</inlineHelpText>
    <label>Basis Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>