force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calculation_Type__c</fullName>
    <description>This optional picklist field specifies how the fee is to be computed.</description>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Flat Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>