force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Change_Of_Circumstance_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Change_Of_Circumstance_Reason__c</fullName>
    <description>Users populate this optional picklist field to indicate the change of circumstance reason for the fee. By default, this field is blank.</description>
    <inlineHelpText>Select the change of circumstance reason for the fee.</inlineHelpText>
    <label>Change of Circumstance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changed Circumstance Affecting Settlement Costs</fullName>
            </value>
            <value>
                <fullName>Changed Circumstance Affecting Eligibility</fullName>
            </value>
            <value>
                <fullName>Borrower Requested Revisions</fullName>
            </value>
            <value>
                <fullName>Loan Estimate Expiration</fullName>
            </value>
            <value>
                <fullName>Interest Rate Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>