force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Collateral_Valuation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Valuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is not required and specifies the related collateral valuation record resulting in the fee.</description>
    <inlineHelpText>Lookup to the related collateral valuation record to which this fee is being applied.</inlineHelpText>
    <label>Collateral Valuation</label>
    <referenceTo>LLC_BI__Collateral_Valuation__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>