force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collection_Method__c</fullName>
    <description>The user populates this picklist field to specify the method of collection for a fee. Values of Cash and Financed will be used in Financed Fee Calculations for the loan. By default, this field is blank.</description>
    <label>Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>