force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Date_Collected__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Collected__c</fullName>
    <label>Date Collected</label>
    <type>Date</type>
</CustomField>