force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field to track which loan fee a pricing option&apos;s fee writesback to when a user selects a scenario.</description>
    <inlineHelpText>Tracks which pricing option fee the system copies to the loan&apos;s fee when a user selects the pricing option.</inlineHelpText>
    <label>Fee</label>
    <referenceTo>LLC_BI__Fee__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>