force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Loan_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the fee to the Fee Loan Aggregate object, which rolls up data from fee to display on the fees summary tab section of the loan. This field is automatically populated.</description>
    <inlineHelpText>The object that rolls up data from fee for display on the Loan</inlineHelpText>
    <label>Fee Loan Aggregate</label>
    <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>