force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Payable_To__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Payable_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually entered and is used to lookup to a relationship that the fee is being paid to.</description>
    <label>Fee Payable To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>