force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Type__c</fullName>
    <description>This field is a picklist that lets the user specify the type of fee that is being applied to the loan. This can be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>DMV</fullName>
            </value>
            <value>
                <fullName>Government Recording</fullName>
            </value>
            <value>
                <fullName>Loan Origination</fullName>
            </value>
            <value>
                <fullName>Settlement/Close</fullName>
            </value>
            <value>
                <fullName>State Tax Stamps</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Title Insurance</fullName>
            </value>
            <value>
                <fullName>Title Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>