force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__First_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__First_Payout_Date__c</fullName>
    <description>Users populate this optional date field to indicate the date the first escrow disbursement is due. By default, this field is blank.</description>
    <inlineHelpText>Enter the date of the first payout from the escrow account.</inlineHelpText>
    <label>First Payout Date</label>
    <type>Date</type>
</CustomField>