force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Is_Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Additional_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional checkbox field to indicate the fee is included in the additional charge aggregate total. By default, this field is deselected.</description>
    <inlineHelpText>This system-populated field indicates the fee is included in the additional charge aggregate total.</inlineHelpText>
    <label>Is Additional Charge</label>
    <type>Checkbox</type>
</CustomField>