force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Is_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Paid_at_Closing__c</fullName>
    <description>This field is a checkbox that is populated automatically if &quot; At Closing&quot; is selected from the &quot;Paid at Closing&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
    <formula>ISPICKVAL( LLC_BI__Paid_at_Closing__c , &apos;At Closing&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid at Closing</label>
    <type>Checkbox</type>
</CustomField>