force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Is_Paid_By_Borrower__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Paid_By_Borrower__c</fullName>
    <description>This checkbox is populated automatically if &quot;Borrower&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
    <formula>ISPICKVAL(  LLC_BI__Paid_By__c , &apos;Borrower&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid By Borrower</label>
    <type>Checkbox</type>
</CustomField>