force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if the fee is part of the standard set of fees (pre-configured using the fee management templates) for this product. This field is automatically set if the fee was selected from the standard fee list to apply to this loan.</description>
    <inlineHelpText>Determines If the fee is part of the standard set of fees for this product.</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>