force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Legal_Entities__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Legal_Entities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is not required and specifies the entity involvement record resulting in the fee.</description>
    <inlineHelpText>Lookup to the related entity involvement record to which this fee is being applied.</inlineHelpText>
    <label>Entity Involvement</label>
    <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>