force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field is a master detail field that is automatically populated linking the fee being applied to the particular loan it is being applied to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>