force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Paid_at_Closing__c</fullName>
    <description>This field is a picklist that allows the user to specify whether the fees being applied to the loan are to be paid &quot;At Closing&quot; or &quot;Outside of Closing&quot;. This value will determine if the &quot;is Paid at Closing&quot; checkbox is populated.</description>
    <label>Paid at Closing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Closing</fullName>
            </value>
            <value>
                <fullName>Outside of Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>