force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Paid_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Paid_By__c</fullName>
    <description>This field is a picklist that allows the user to specify who is responsible for paying this fee. This value will determine if the &quot;is Paid by Seller&quot; , &quot;is Paid by Lender&quot; or &quot; is Paid by Borrower&quot; checkbox is populated. Each fee will only have 1 selection.</description>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Paid</fullName>
            </value>
            <value>
                <fullName>Borrower Paid</fullName>
            </value>
            <value>
                <fullName>Financed from Proceeds</fullName>
            </value>
            <value>
                <fullName>Paid Outside Closing</fullName>
            </value>
            <value>
                <fullName>Paid by Seller</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>