force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Pricing_Option__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Option__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system populates this field to link fees to pricing options in order to display fees with the appropriate pricing option.</description>
    <inlineHelpText>This field indicates the pricing option that should have fees assigned to it.</inlineHelpText>
    <label>Pricing Option</label>
    <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>