force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Shoppable_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Shoppable_Category__c</fullName>
    <description>--DEPRECATED-- Replaced by TRID_Disclosure_Category__c. 
        Users or system populates this optional picklist field with if the customer can shop for the referenced service associated with fees, costs, or adjustments for a loan. By default, it is false.</description>
    <inlineHelpText>Select Cannot Shop Service if your customer cannot shop for this service. Select Shoppable Service if your customer can shop for this service.</inlineHelpText>
    <label>-D Shoppable Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service You Can Shop For</fullName>
            </value>
            <value>
                <fullName>Service You Cannot Shop For</fullName>
                <default>true</default>
                <label>Service You Cannot Shop For</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>