force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>The system automatically populates this required field to reflect the current state of this fee record. Status values of inactive fees reflect as deleted records and do not appear on the fees page. nCino recommends users do not adjust this field. By default, the field is active.</description>
    <inlineHelpText>This field contains the current state of this fee.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>