force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Template_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is specific to Standard Fees, and it links the Template Record that the fee was created from with the fee that is being applied to the loan.</description>
    <inlineHelpText>The Template Record that the fee was created from.</inlineHelpText>
    <label>Template Record</label>
    <referenceTo>LLC_BI__Template_Records__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>