force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Third_Party_Service_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Third_Party_Service_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this optional lookup field with the third party service to which the fee relates. By default, it is blank.</description>
    <inlineHelpText>This system-populated lookup field contains the third-party service to which the fee relates.</inlineHelpText>
    <label>Third Party Service Detail</label>
    <referenceTo>LLC_BI__Service_Mgmt_Detail__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>