force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Trade_In_Allowance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trade_In_Allowance__c</fullName>
    <description>The system automatically populates this currency field to indicate the amount the seller pays for the trade-in collateral. By default, this field is blank.</description>
    <inlineHelpText>This field displays the amount the seller pays toward the applicant&apos;s trade-in collateral.</inlineHelpText>
    <label>Trade-In Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>